--- a/lib/README.adoc
+++ b/lib/README.adoc
@@ -15,15 +15,19 @@ Version 5 basiert nun komplett auf die XML-Beschreibung von http://www.gdv-onlin
 Ferner kann man sich in v5 über XmlService.getInstance("VUVM2013.xml") gezielt auf eine bestimmte Version der XML-Beschreibung beziehen.
 
 
-== Kompatibiltaet von v5 zu v4
+== Kompatibilitaet von v5 zu v4
 
 In Satz 0221.051 (Kfz) gibt es ein Abweichung von der Beschreibung ueber die Enum-Klasse `gdv.xport.satz.feld.sparte51.Feld221` und der XML-Beschreibung des GDVs.
-Waehrend in der Enum-Beschreibung die KH-Deckungssummen in Teil 1, 2 und 3 aufgeteilt sind, sind diese in der XML-Beschreibung nur als Ganzes deklariert. Lediglich in der Beschreibung zu diesem Feld wird darauf verwiesen, dass dieses Feld eigentlich aus 3 Teilen besteht.
-Möchte man hier das alte Verhalten, muss man die `Feld221`-Enum ueber die `SatzRegistry` registrieren:
+Waehrend in der Enum-Beschreibung die KH-Deckungssummen in Teil 1, 2 und 3 aufgeteilt sind, sind diese in der XML-Beschreibung nur als Ganzes deklariert.
+Lediglich in der Beschreibung zu diesem Feld wird darauf verwiesen, dass dieses Feld eigentlich aus 3 Teilen besteht.
+Möchte man hier das alte Verhalten, muss man die Resource "Satz0221.051.xml" als SatzXML-Instanz in `SatzRegistry` registrieren:
 
 ```java
-    SatzRegistry.getInstance().registerEnum(gdv.xport.satz.feld.sparte51.Feld221.class, SatzTyp.of(221, 51));
+    SatzRegistry.getInstance().register(SatzXml.of("Satz0221.051.xml"), SatzTyp.of(221, 51));
 ```
+
+Da mit v5 die Enum-Aufzählungstypen komplett durch XML-Beschreibungen ersetzt werden können, sind sie jetzt als @Deprecated gekennzeichnet.
+Sie werden mit v6 verschwinden bzw. nach [gdv-xport-deprecated](../deprecated/README.adoc) verschoben.
 
 
 == Kompatibilitaet von v3 zu v4
