--- a/src/asciidoc/README.adoc
+++ b/src/asciidoc/README.adoc
@@ -10,6 +10,8 @@ solange das Dokument noch im Entstehen und noch nicht unter http://www.aosd.de/g
 
 == Inhalt
 
+1, link:de/01_introduction_and_goals.adoc[Einführung und Ziele]
 4. link:de/04_solution_strategy.adoc[Lösungsstrategie]
 6. link:de/06_runtime_view.adoc[Laufzeitsicht]
 9. link:de/09_design_decisions.adoc[Designentscheidungen]
+12. link:de/12_glossary.adoc[Glosar]
