Datenpaket nicht mehr 'final'

--- a/src/asciidoc/de/12_glossary.adoc
+++ b/src/asciidoc/de/12_glossary.adoc
@@ -9,6 +9,9 @@
 |Begriff
 |Definition
 
+| Sparte
+| Die Sparte kennzeichnet einen Versicherungsbereich (z.B. Lebensvericherung = Sparte 010).
+
 | VU
 | Versicherungsunternehmen
 
