--- a/doc/manual/README.adoc
+++ b/doc/manual/README.adoc
@@ -6,3 +6,4 @@ In diesem Verzeichnis findest du einige Kurz-Anleitungen, die den Einstieg in gd
 - link:import[Der erste Import]: wie bekomme ich eine GDV-Datei als link:../../lib/src/main/java/gdv/xport/Datenpaket.java[Datenpaket]?
 - link:main[Das Hauptprogramm]: Verwendung der Library als Kommandozeilen-Programm
 - link:export[Export]: der Export eines link:../../lib/src/main/java/gdv/xport/Datenpaket.java[Datenpaket]s
+- link:streaming[Streaming-API]: Importieren on-the-fly
