--- a/doc/manual/README.adoc
+++ b/doc/manual/README.adoc
@@ -2,8 +2,9 @@
 
 In diesem Verzeichnis findest du einige Kurz-Anleitungen, die den Einstieg in gdv.xport erleichtern.
 
-- link:hello[Hello World]: der Klassiker, auf gdv.xport übertragen
-- link:import[Der erste Import]: wie bekomme ich eine GDV-Datei als link:../../lib/src/main/java/gdv/xport/Datenpaket.java[Datenpaket]?
-- link:main[Das Hauptprogramm]: Verwendung der Library als Kommandozeilen-Programm
-- link:export[Export]: der Export eines link:../../lib/src/main/java/gdv/xport/Datenpaket.java[Datenpaket]s
-- link:streaming[Streaming-API]: Importieren on-the-fly
+- link:hello.adoc[Hello World]: der Klassiker, auf gdv.xport übertragen
+- link:import.adoc[Der erste Import]: wie bekomme ich eine GDV-Datei als link:../../lib/src/main/java/gdv/xport/Datenpaket.java[Datenpaket]?
+- link:main.adoc[Das Hauptprogramm]: Verwendung der Library als Kommandozeilen-Programm
+- link:export.adoc[Export]: der Export eines link:../../lib/src/main/java/gdv/xport/Datenpaket.java[Datenpaket]s
+- link:streaming.adoc[Streaming-API]: Importieren on-the-fly
+- link:extend.adoc[Eigene Erweiterungen]: noch mehr Satzarten
