--- a/doc/build.adoc
+++ b/doc/build.adoc
@@ -8,7 +8,7 @@
 
 |https://travis-ci.com/github/oboehm/gdv.xport/branches[Travis-CI.com]
 |https://travis-ci.com/github/oboehm/gdv.xport/branches[image:https://travis-ci.com/oboehm/gdv.xport.svg?branch=master[Build Status]]
-|https://travis-ci.com/github/oboehm/gdv.xport/branches[image:https://travis-ci.com/oboehm/gdv.xport.svg?branch=develop%2F4.x[Build Status]]
+|https://travis-ci.com/github/oboehm/gdv.xport/branches[image:https://travis-ci.com/oboehm/gdv.xport.svg?branch=develop[Build Status]]
 |s. link:../.travis.yml[.travis.yml]
 
 |https://travis-ci.org/oboehm/gdv.xport/branches[Travis-CI.org] (alt)
