Doku um Docker-Einstieg ergänzt

--- a/doc/README.adoc
+++ b/doc/README.adoc
@@ -9,6 +9,7 @@ https://coveralls.io/github/oboehm/gdv.xport[image:https://coveralls.io/repos/gi
 Dieser Bereich ist für die interne Entwicklung gedacht:
 
 * link:build.adoc[Build]: CI-Build, manueller Bau und Bauen über Docker
+* link:docker.adoc[Docker]: für den Einstieg in Docker
 * link:delivery.adoc[Check-Liste]: für die Auslieferung eines neuen Releases
 * link:deployment.adoc[Deployment]: für das Deployment auf Heroku
 * link:../CHANGELOG.md[Changelog]: Übersicht über die einzelnen Versionen
