--- a/doc/delivery.adoc
+++ b/doc/delivery.adoc
@@ -88,8 +88,8 @@ Um ein Docker-Image auf https://hub.docker.com/r/oboehm/gdv.xport zu bringen, si
 
 * Docker-Image bauen: `docker build -t gdv.xport -f Dockerfile .`
 * Image-ID ermitteln: `docker images`
-* Docker-Image taggen: `docker tag <Image-ID> oboehm/gdv.xport:4.1.0`
-* Docker-Image pushen: `docker push oboehm/gdv.xport`
+* Docker-Image taggen: `docker tag <Image-ID> oboehm/gdv.xport:6.4.0`
+* Docker-Image pushen: `docker push oboehm/gdv.xport:6.4.0`
 
 
 
