--- a/doc/build.adoc
+++ b/doc/build.adoc
@@ -6,15 +6,10 @@
 |===
 |Server|master |develop |Konfiguration
 
-|https://travis-ci.com/github/oboehm/gdv.xport/branches[Travis-CI.com]
-|https://travis-ci.com/github/oboehm/gdv.xport/branches[image:https://travis-ci.com/oboehm/gdv.xport.svg?branch=master[Build Status]]
-|https://travis-ci.com/github/oboehm/gdv.xport/branches[image:https://travis-ci.com/oboehm/gdv.xport.svg?branch=develop[Build Status]]
-|s. link:../.travis.yml[.travis.yml]
-
-|https://travis-ci.org/oboehm/gdv.xport/branches[Travis-CI.org] (alt)
-|https://travis-ci.org/oboehm/gdv.xport/branches[image:https://travis-ci.org/oboehm/gdv.xport.svg?branch=master[Build Status]]
-|https://travis-ci.com/github/oboehm/gdv.xport/branches[image:https://travis-ci.com/oboehm/gdv.xport.svg?branch=develop%2F4.x[Build Status]]
-|s. link:../.travis.yml[.travis.yml]
+|https://github.com/oboehm/gdv.xport/actions[GitHub]
+|-
+|https://github.com/oboehm/gdv.xport/actions/workflows/maven.yml[image:https://github.com/oboehm/gdv.xport/actions/workflows/maven.yml/badge.svg[Build Status]]
+|s. link:../.github/workflows/maven.yml[maven.yml]
 
 |https://sonarcloud.io/projects[sonarcloud.io]
 |https://sonarcloud.io/dashboard?id=com.github.oboehm%3Agdv-xport%3Amaster[image:https://sonarcloud.io/api/project_badges/measure?metric=alert_status&project=com.github.oboehm:gdv-xport[Quality Gate]]
