--- a/doc/delivery.adoc
+++ b/doc/delivery.adoc
@@ -26,8 +26,7 @@ Check-Liste für die Auslieferung eines neuen Releases:
 |D-Day
 |Finaler Release-Build und Release-Test (inkl. Signierung)
 |baue alle Artefakte auf dem Release-Branch 
-(`mvn -B -Prelease -Dpatterntesting.integrationTest clean install source:jar javadoc:jar gpg:sign -Dgpg.passphrase=xx`);
-sollte das maven-surefire-plugin unter Java 11 mit einer NullPointerException aussteigen, den Build mit Java 8 versuchen
+(`mvn -DskipTests clean install source:jar javadoc:jar gpg:sign -Dgpg.passphrase=xx`);
 
 |D-Day
 |Docker-Image bauen und pushen
